--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -14,11 +14,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.10.11
-      - name: Install and configure Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: 1.8.2
 
-      - run: poetry install --with dev
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH  # Add Poetry to the PATH
+
+      - name: Install dependencies
+        run: poetry install --with dev
+
       - name: Run style checks
         run: make style
